--- a/_posts/2019-08-23-abm.md
+++ b/_posts/2019-08-23-abm.md
@@ -1,7 +1,7 @@
 ---
 layout: post 
 title: Agent-Based Modelling of School Enrollment
-tags: [R, Netlogo, agent-based modelling]
+tags: [R, Netlogo, Agent-Based Modelling]
 ---
 
 Social behavior is often complex due to the heterogeneity of actor behavior and interests. Agent-based modelling, which simulates outputs based on rules of agent behavior, represents an interesting new method for social scientists to simulate real-world phenomena.  
